[package]
name = "testcall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures = "0.3"
serde_json = "1.0"
futures-util = "0.3.31"
url = "2.5.2"
serde = { version = "1.0.210", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"